--- a/master.html
+++ b/master.html
@@ -16,7 +16,6 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <script src="E:\GitHub\Assignment2\ASG2\js\script.js"></script>
-
   </head>
 
   <body>
@@ -158,15 +157,35 @@
       </div>
     </section>
 
-    <!----------------------------Footer---------------------------------->
+  <!----------------------------Footer---------------------------------->
+  <!------------center footer-------------->
+    <hr color="#03023d">
     <section class="footer">
       <h4>Privacy Policy</h4>
-      <p>gggggggggggggggggggggggggg</p>
+      <p><i class="fa fa-copyright"></i>Silent Library. All Rights Reserved</p>
       <div class="icons">
+        <i class="fa fa-phone">&nbsp;0112267990</i><br>
+        <i class="fa fa-google"></i>
         <i class="fa fa-facebook"></i>
-        <i class="fa fa-intagram"></i>
+        <i class="fa fa-instagram"></i>
+        <i class="fa fa-twitter"></i>
       </div>
-      <p>Created by <i class="fa fa-heart-o"></i> Madhuja Pabasara</p>
+      <p>Site by <i class="fa fa-heart-o"></i> Madhuja Pabasara</p>
     </section>
-  </body>
+
+<!--------------Left side footer-------------->
+<section class="footer-left">
+  <div class="icons">
+  <h4>
+  <i class="fa fa-calendar-o"></i>Events<br>
+  <i class="fa fa-clone"></i>Catalog<br>
+  <i class="fa fa-id-card-o"></i>Library Cards<br>
+  <i class="fa fa-question-circle"></i>Ask a Librarian<br>
+  <i class="fa fa-heartbeat"></i>Donate</h4><br>
+  </div>
+</section>
+
+
+</body>
 </html>
+
