--- a/master.html
+++ b/master.html
@@ -157,35 +157,42 @@
       </div>
     </section>
 
-  <!----------------------------Footer---------------------------------->
-  <!------------center footer-------------->
-    <hr color="#03023d">
+   <!----------------------------Footer---------------------------------->
+    <!--------------center footer--------------->
+    <hr color="#03023d" />
     <section class="footer">
-      <h4>Privacy Policy</h4>
-      <p><i class="fa fa-copyright"></i>Silent Library. All Rights Reserved</p>
-      <div class="icons">
-        <i class="fa fa-phone">&nbsp;0112267990</i><br>
-        <i class="fa fa-google"></i>
-        <i class="fa fa-facebook"></i>
-        <i class="fa fa-instagram"></i>
-        <i class="fa fa-twitter"></i>
+      <div class="row">
+        <div class="footer-col1">
+          <div class="icons">
+            <h4>
+              <i class="fa fa-calendar-o"></i>Events<br />
+              <i class="fa fa-clone"></i>Catalog<br />
+              <i class="fa fa-id-card-o"></i>Library Cards<br />
+              <i class="fa fa-question-circle"></i>Ask a Librarian<br />
+              <i class="fa fa-heartbeat"></i>Donate
+            </h4>
+          </div>
+        </div>
+
+        <div class="footer-col2">
+          <h4>Privacy Policy</h4>
+          <p>
+            <i class="fa fa-copyright"></i>Silent Library. All Rights Reserved
+          </p>
+          <div class="icons">
+            <i class="fa fa-phone">&nbsp;0112267990</i><br />
+            <i class="fa fa-google"></i>
+            <i class="fa fa-facebook"></i>
+            <i class="fa fa-instagram"></i>
+            <i class="fa fa-twitter"></i>
+          </div>
+          <p>Site by <i class="fa fa-heart-o"></i> Madhuja Pabasara</p>
+        </div>
+        <div class="footer-col2" >
+          <div class="icons">
+          </div>
+        </div>
       </div>
-      <p>Site by <i class="fa fa-heart-o"></i> Madhuja Pabasara</p>
     </section>
-
-<!--------------Left side footer-------------->
-<section class="footer-left">
-  <div class="icons">
-  <h4>
-  <i class="fa fa-calendar-o"></i>Events<br>
-  <i class="fa fa-clone"></i>Catalog<br>
-  <i class="fa fa-id-card-o"></i>Library Cards<br>
-  <i class="fa fa-question-circle"></i>Ask a Librarian<br>
-  <i class="fa fa-heartbeat"></i>Donate</h4><br>
-  </div>
-</section>
-
-
-</body>
+  </body>
 </html>
-
