--- a/index.html
+++ b/index.html
@@ -7,21 +7,15 @@
     <title>Welcome to the Silent Library</title>
     <link rel="stylesheet" href="css\style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="E:\GitHub\Assignment2\ASG2\js\script.js"></script>
   </head>
 
   <body>
     <section class="header">
       <nav>
-        <a href="Assignment2.html"><img src="images\logo.png" /></a>
+        <a href="index.html"><img src="images\logo.png" /></a>
         <div class="nav-links" id="navLinks">
           <i class="fa fa-times" onclick="hideMenu()"></i>
           <ul>
@@ -36,11 +30,20 @@
         <i class="fa fa-bars" onclick="showMenu()"></i>
       </nav>
       <div class="text-box">
-        <h1>silent library</h1>
+        <h1>world's biggest silent library</h1>
         <p>this is the website of <br />silent library</p>
         <a href="" class="hero-btn">Visit Us To Know More</a>
       </div>
     </section>
+
+
+    var navLinks = document.getElementById("navLinks");
+    function showMenu() {
+    navLinks.style.right = "0";
+    }
+function hideMenu() {
+  navLinks.style.right = "-200px";
+}
 
     <!-------------------------course---------------------------------->
     <section class="course">
@@ -157,7 +160,7 @@
       </div>
     </section>
 
-    <!----------------------------Footer---------------------------------->
+   <!----------------------------Footer---------------------------------->
     <!--------------center footer--------------->
     <hr color="#03023d" />
     <section class="footer">
