Updated with relative paths

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="E:\GitHub\Assignment2\ASG2\js\script.js"></script>
+    <script src="js\script.js"></script>
   </head>
 
   <body>
@@ -36,14 +36,6 @@
       </div>
     </section>
 
-
-    var navLinks = document.getElementById("navLinks");
-    function showMenu() {
-    navLinks.style.right = "0";
-    }
-function hideMenu() {
-  navLinks.style.right = "-200px";
-}
 
     <!-------------------------course---------------------------------->
     <section class="course">
@@ -73,21 +65,21 @@ function hideMenu() {
 
       <div class="row">
         <div class="books-col">
-          <img src="E:\Assignment2\A2\images\img4.jpg" />
+          <img src="images\img4.jpg" />
           <div class="layer">
             <h3>COLOMBO</h3>
           </div>
         </div>
 
         <div class="books-col">
-          <img src="E:\Assignment2\A2\images\img6.jpg" />
+          <img src="images\img6.jpg" />
           <div class="layer">
             <h3>GALLE</h3>
           </div>
         </div>
 
         <div class="books-col">
-          <img src="E:\Assignment2\A2\images\img5.jpg" />
+          <img src="images\img5.jpg" />
           <div class="layer">
             <h3>MATARA</h3>
           </div>
@@ -102,17 +94,17 @@ function hideMenu() {
 
       <div class="row">
         <div class="facilities-col">
-          <img src="E:\Assignment2\A2\images\img1.jpg" />
+          <img src="images\img1.jpg" />
           <h3>world class library</h3>
           <p>ddddddddddddddd</p>
         </div>
         <div class="facilities-col">
-          <img src="E:\Assignment2\A2\images\library-books.jpg" />
+          <img src="images\library-books.jpg" />
           <h3>All types of books</h3>
           <p>ddddddddddddddd</p>
         </div>
         <div class="facilities-col">
-          <img src="E:\Assignment2\A2\images\img1.jpg" />
+          <img src="images\img1.jpg" />
           <h3>Enjoy Events</h3>
           <p>ddddddddddddddd</p>
         </div>
@@ -126,7 +118,7 @@ function hideMenu() {
 
       <div class="row">
         <div class="testimonial-col">
-          <img src="E:\Assignment2\A2\images\user2.jpg" />
+          <img src="images\user2.jpg" />
           <div>
             <p>The Best eLibrary experiance</p>
             <h3>Nilushi Hatharasinghe</h3>
@@ -138,7 +130,7 @@ function hideMenu() {
           </div>
         </div>
         <div class="testimonial-col">
-          <img src="E:\Assignment2\A2\images\user3.jpg" />
+          <img src="images\user3.jpg" />
           <div>
             <p>Recommend to everyone to visit them and read online</p>
             <h3>Sanduni Nisansa</h3>
