--- a/events.html
+++ b/events.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About Silent Library</title>
+    <title>Events-Silent Library</title>
     <link rel="stylesheet" href="css\style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link
@@ -35,22 +35,29 @@
         </div>
         <i class="fa fa-bars" onclick="showMenu()"></i>
       </nav>
-      <h1>About</h1>
+      <h1>Events</h1>
     </section>
-    <!-----------------About content------------------------------------->
+    <!-----------------Events content------------------------------------->
+    <section class="course">
+      <h1>Upcoming Events</h1>
+      <p>helen,onlinebooks</p>
 
-    <section class="about">
       <div class="row">
-        <div class="about-col">
-          <h1>We are biggest</h1>
-          <p>ggggggggggggggggggggggggggggsjsajsa</p>
-          <a href="" class="hero-btn blue-btn">Read Now</a>
+        <div class="course-col">
+          <h3>Kids</h3>
+          <p>adhhhhhh</p>
         </div>
-        <div class="about-col">
-          <img src="images\img1.jpg" />
+        <div class="course-col">
+          <h3>Teens</h3>
+          <p>bggggggggggggggg</p>
+        </div>
+        <div class="course-col">
+          <h3>Adults</h3>
+          <p>chhhhhhhhhhhhhhhh</p>
         </div>
       </div>
     </section>
+
 
      <!----------------------------Footer---------------------------------->
      <hr color="#03023d" />
