--- a/master.html
+++ b/master.html
@@ -15,13 +15,13 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <script src="E:\GitHub\Assignment2\ASG2\js\script.js"></script>
+    <script src="js\script.js"></script>
   </head>
 
   <body>
     <section class="header">
       <nav>
-        <a href="Assignment2.html"><img src="images\logo.png" /></a>
+        <a href="index.html"><img src="images\logo.png" /></a>
         <div class="nav-links" id="navLinks">
           <i class="fa fa-times" onclick="hideMenu()"></i>
           <ul>
@@ -36,7 +36,7 @@
         <i class="fa fa-bars" onclick="showMenu()"></i>
       </nav>
       <div class="text-box">
-        <h1>silent library</h1>
+        <h1>world's biggest silent library</h1>
         <p>this is the website of <br />silent library</p>
         <a href="" class="hero-btn">Visit Us To Know More</a>
       </div>
@@ -70,21 +70,21 @@
 
       <div class="row">
         <div class="books-col">
-          <img src="E:\Assignment2\A2\images\img4.jpg" />
+          <img src="images\img4.jpg" />
           <div class="layer">
             <h3>COLOMBO</h3>
           </div>
         </div>
 
         <div class="books-col">
-          <img src="E:\Assignment2\A2\images\img6.jpg" />
+          <img src="images\img6.jpg" />
           <div class="layer">
             <h3>GALLE</h3>
           </div>
         </div>
 
         <div class="books-col">
-          <img src="E:\Assignment2\A2\images\img5.jpg" />
+          <img src="images\img5.jpg" />
           <div class="layer">
             <h3>MATARA</h3>
           </div>
@@ -99,17 +99,17 @@
 
       <div class="row">
         <div class="facilities-col">
-          <img src="E:\Assignment2\A2\images\img1.jpg" />
+          <img src="images\img1.jpg" />
           <h3>world class library</h3>
           <p>ddddddddddddddd</p>
         </div>
         <div class="facilities-col">
-          <img src="E:\Assignment2\A2\images\library-books.jpg" />
+          <img src="images\library-books.jpg" />
           <h3>All types of books</h3>
           <p>ddddddddddddddd</p>
         </div>
         <div class="facilities-col">
-          <img src="E:\Assignment2\A2\images\img1.jpg" />
+          <img src="images\img1.jpg" />
           <h3>Enjoy Events</h3>
           <p>ddddddddddddddd</p>
         </div>
@@ -123,7 +123,7 @@
 
       <div class="row">
         <div class="testimonial-col">
-          <img src="E:\Assignment2\A2\images\user2.jpg" />
+          <img src="images\user2.jpg" />
           <div>
             <p>The Best eLibrary experiance</p>
             <h3>Nilushi Hatharasinghe</h3>
@@ -135,7 +135,7 @@
           </div>
         </div>
         <div class="testimonial-col">
-          <img src="E:\Assignment2\A2\images\user3.jpg" />
+          <img src="images\user3.jpg" />
           <div>
             <p>Recommend to everyone to visit them and read online</p>
             <h3>Sanduni Nisansa</h3>
@@ -157,8 +157,8 @@
       </div>
     </section>
 
-   <!----------------------------Footer---------------------------------->
-    <!--------------center footer--------------->
+    <!----------------------------Footer---------------------------------->
+    
     <hr color="#03023d" />
     <section class="footer">
       <div class="row">
@@ -188,8 +188,16 @@
           </div>
           <p>Site by <i class="fa fa-heart-o"></i> Madhuja Pabasara</p>
         </div>
-        <div class="footer-col2" >
+
+        <div class="footer-col3">
+          <h4>Visit</h4>
+
           <div class="icons">
+            <p><i class="fa fa-angle-double-right">&nbsp;Central Library</i></p>
+            <p>
+              <i class="fa fa-angle-double-right">&nbsp;Branch Libraries</i>
+            </p>
+            <p><i class="fa fa-angle-double-right">&nbsp;Projects</i></p>
           </div>
         </div>
       </div>
