--- a/about.html
+++ b/about.html
@@ -26,7 +26,8 @@
           <i class="fa fa-times" onclick="hideMenu()"></i>
           <ul>
             <li><a href="">Home</a></li>
-            <li><a href="">About</a></li>
+          
+            <li><a class="active" href="">About</a></li>
             <li><a href="">Services and Specialties</a></li>
             <li><a href="">Events</a></li>
             <li><a href="">Connect</a></li>
@@ -53,8 +54,7 @@
     </section>
 
      <!----------------------------Footer---------------------------------->
-     <hr color="#03023d" />
-    <section class="footer">
+     <section class="footer">
       <div class="row">
         <div class="footer-col1">
           <div class="icons">
