--- a/events.html
+++ b/events.html
@@ -28,7 +28,7 @@
             <li><a href="">Home</a></li>
             <li><a href="">About</a></li>
             <li><a href="">Services and Specialties</a></li>
-            <li><a href="">Events</a></li>
+            <li><a class="active" href="">Events</a></li>
             <li><a href="">Connect</a></li>
             <li><a href="">Explore</a></li>
           </ul>
@@ -60,8 +60,7 @@
 
 
      <!----------------------------Footer---------------------------------->
-     <hr color="#03023d" />
-    <section class="footer">
+     <section class="footer">
       <div class="row">
         <div class="footer-col1">
           <div class="icons">
