--- a/master.html
+++ b/master.html
@@ -25,12 +25,12 @@
         <div class="nav-links" id="navLinks">
           <i class="fa fa-times" onclick="hideMenu()"></i>
           <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="">About</a></li>
-            <li><a href="">Services and Specialties</a></li>
-            <li><a href="">Events</a></li>
-            <li><a href="">Connect</a></li>
-            <li><a href="">Explore</a></li>
+            <li><a class="active" href="">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Services and Specialties</a></li>
+            <li><a href="#">Events</a></li>
+            <li><a href="#">Connect</a></li>
+            <li><a href="#">Explore</a></li>
           </ul>
         </div>
         <i class="fa fa-bars" onclick="showMenu()"></i>
@@ -159,7 +159,6 @@
 
     <!----------------------------Footer---------------------------------->
     
-    <hr color="#03023d" />
     <section class="footer">
       <div class="row">
         <div class="footer-col1">
