--- a/services and specialties.html
+++ b/services and specialties.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About Silent Library</title>
+    <title>Services and Specialties-Silent Library</title>
     <link rel="stylesheet" href="css\style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link
@@ -28,6 +28,7 @@
             <li><a href="">Home</a></li>
             <li><a href="">About</a></li>
             <li><a href="">Services and Specialties</a></li>
+            <li><a class="active" href="">Services and Specialties</a></li>
             <li><a href="">Events</a></li>
             <li><a href="">Connect</a></li>
             <li><a href="">Explore</a></li>
@@ -63,8 +64,7 @@
     </section>
 
      <!----------------------------Footer---------------------------------->
-     <hr color="#03023d" />
-    <section class="footer">
+     <section class="footer">
       <div class="row">
         <div class="footer-col1">
           <div class="icons">
@@ -107,4 +107,6 @@
       </div>
     </section>
   </body>
-  </html>
+</html>
+
+     
