--- a/index.html
+++ b/index.html
@@ -37,10 +37,18 @@
       </nav>
       <div class="text-box">
         <h1>SILENT LIBRARY</h1>
-        <p>Today a READER, Tomorrow a LEADER</p>
+        <p>Dreaming With Open Eyes</p>
         <a href="" class="hero-btn">Visit Us To Know More</a>
       </div>
+
+      <div class= "searchbox">
+      <form action="https://www.google.com/search" method="get" class="search-bar">
+        <input type="text" placeholder="Search Everything" name="q">
+        <button type="submit"><img src="images\search.png"></button>
+      </form>
+      </div>
     </section>
+
 
     <!-------------------------Events---------------------------------->
     <section class="events">
