Hyperlinks to pages

--- a/connect.html
+++ b/connect.html
@@ -21,34 +21,33 @@
   <body>
     <section class="header1">
       <nav>
-        <a href="Assignment2.html"><img src="images\logo.png" /></a>
+        <a href="connect.html"><img src="images\logo.png" /></a>
         <div class="nav-links" id="navLinks">
           <i class="fa fa-times" onclick="hideMenu()"></i>
           <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="">About</a></li>
-            <li><a href="">Services and Specialties</a></li>
-            <li><a href="">Events</a></li>
-            <li><a href="">Connect</a></li>
+            <li><a href="D:\Assignments\ASG2\index.html">Home</a></li>
+            <li><a href="D:\Assignments\ASG2\about.html">About</a></li>
+            <li><a href="D:\Assignments\ASG2\servicesandspecialties.html">Services and Specialties</a></li>
+            <li><a href="D:\Assignments\ASG2\events.html">Events</a></li>
             <li><a class="active" href="">Connect</a></li>
-            <li><a href="">Explore</a></li>
+            <li><a href="D:\Assignments\ASG2\explore.html">Explore</a></li>
           </ul>
         </div>
         <i class="fa fa-bars" onclick="showMenu()"></i>
       </nav>
-      <h1>About</h1>
+      <h1>Connect</h1>
     </section>
-    <!-----------------About content------------------------------------->
+    <!-----------------Connect content------------------------------------->
 
     <section class="about">
       <div class="row">
         <div class="about-col">
-          <h1>We are biggest</h1>
-          <p>ggggggggggggggggggggggggggggsjsajsa</p>
-          <a href="" class="hero-btn blue-btn">Read Now</a>
+          <h1>Main Branch<br>Silent Library,Riverston Road, Colombo 6</h1>
+          <p>Join us for storytimes, book groups, and other programs for all ages. Read or work in one of our many comfortable seating areas. Use our computers or take advantage of our free wi-fi.</p>
+          <a href="D:\Assignments\ASG2\index.html" class="hero-btn blue-btn">Read Now</a>
         </div>
         <div class="about-col">
-          <img src="images\img1.jpg" />
+          <img src="images\bg4.jpg" />
         </div>
       </div>
     </section>
