--- a/explore.html
+++ b/explore.html
@@ -21,36 +21,57 @@
   <body>
     <section class="header1">
       <nav>
-        <a href="Assignment2.html"><img src="images\logo.png" /></a>
+        <a href="explore.html"><img src="images\logo.png" /></a>
         <div class="nav-links" id="navLinks">
           <i class="fa fa-times" onclick="hideMenu()"></i>
           <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="">About</a></li>
-            <li><a href="">Services and Specialties</a></li>
-            <li><a href="">Events</a></li>
-            <li><a href="">Connect</a></li>
+            <li><a href="D:\Assignments\ASG2\index.html">Home</a></li>
+            <li><a href="D:\Assignments\ASG2\about.html">About</a></li>
+            <li><a href="D:\Assignments\ASG2\servicesandspecialties.html">Services and Specialties</a></li>
+            <li><a href="D:\Assignments\ASG2\events.html">Events</a></li>
+            <li><a href="D:\Assignments\ASG2\connect.html">Connect</a></li>
             <li><a class="active" href="">Explore</a></li>
           </ul>
         </div>
         <i class="fa fa-bars" onclick="showMenu()"></i>
       </nav>
-      <h1>About</h1>
+      <h1>Explore</h1>
     </section>
-    <!-----------------About content------------------------------------->
-
-    <section class="about">
-      <div class="row">
-        <div class="about-col">
-          <h1>We are biggest</h1>
-          <p>ggggggggggggggggggggggggggggsjsajsa</p>
-          <a href="" class="hero-btn blue-btn">Read Now</a>
-        </div>
-        <div class="about-col">
-          <img src="images\img1.jpg" />
-        </div>
+    <!-----------------explore content------------------------------------->
+<p>Find books, videos, and more in our online catalog. You have access to all the public libraries in our county through the Monroe County Library System. Download ebooks and audiobooks or check out one of our many databases.</p>
+<div class="row">
+      <div class="newBooks-col">
+        <img src="images\scienceComics.jpg">
+        <h3><a href="https://www.amazon.com/Science-Comics-Skyscrapers-Heights-Engineering/dp/1626727945" target="_blank">Science Comics Skycrapers<a></a></h3>
+        <p>Leave no brick unturned in John Kerschbaum's Science Comics: Skyscrapers, the latest volume in First Second’s action-packed nonfiction graphic novel series for middle-grade readers!</p>
       </div>
-    </section>
+      <div class="newBooks-col">
+        <img src="images\figgyAndBoone.jpg">
+        <h3><a href="https://www.simonandschuster.com/series/Figgy-Boone" target="_blank">Figgy & Boone</a></h3>
+        <p>In the second Level 1 Ready to Read Graphics book about a mouse named Figgy and a rat named Boone, the friends discover a big wheel of cheese!</p>
+      </div>
+      <div class="newBooks-col">
+        <img src="images\cityofmagic.jpg">
+        <h3><a href="https://www.goodreads.com/book/show/58210891-city-of-magic" target="_blank">City Of Magic</a></h3>
+        <p>From Newbery Medalist Avi comes a richly imagined, action-packed companion to his bestselling medieval mysteries Midnight Magic and Murder at Midnight!</p>
+      </div>
+    
+      <div class="newBooks-col">
+        <img src="images\doubleExposure.jpg">
+        <h3><a href="https://www.amazon.com/Double-Exposure-Novel-Ava-Barry/dp/163936224X" target="_blank">Double Exposure</a></h3>
+        <p>In this heart-pounding tale of deception, a young P.I. must unravel the secrets behind the murders of a Los Angeles heiress's parents!</p>
+      </div>
+      <div class="newBooks-col">
+        <img src="images\truthOrLie.jpg">
+        <h3><a href="https://www.amazon.com/Truth-Lie-Dogs-Step-Reading/dp/0593429109" target="_blank">truth or Lie</a></h3>
+        <p>See if you can find the facts about your favorite dogs with the help of the Truth Sleuth!</p>
+      </div>
+      <div class="newBooks-col">
+        <img src="images\windPower.jpg">
+        <h3><a href="https://www.amazon.com/Power-Energy-Evolutions-Robyn-Hardyman/dp/1914383052" target="_blank">Wind Power</a></h3>
+        <p>In this inspiring science book readers will find out why we burn fossil fuels, the harm it is causing, and why evolution in the wind power industry could make it a powerful weapon in the fight to create a sustainable future.</p>
+      </div>
+    </div>
 
      <!----------------------------Footer---------------------------------->
      <section class="footer">
