--- a/servicesandspecialties.html
+++ b/servicesandspecialties.html
@@ -21,47 +21,46 @@
   <body>
     <section class="header1">
       <nav>
-        <a href="Assignment2.html"><img src="images\logo.png" /></a>
+        <a href="servicesandspecialties.html"><img src="images\logo.png" /></a>
         <div class="nav-links" id="navLinks">
           <i class="fa fa-times" onclick="hideMenu()"></i>
           <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="">About</a></li>
-            <li><a href="">Services and Specialties</a></li>
+            <li><a href="D:\Assignments\ASG2\index.html">Home</a></li>
+            <li><a href="D:\Assignments\ASG2\about.html">About</a></li>
             <li><a class="active" href="">Services and Specialties</a></li>
-            <li><a href="">Events</a></li>
-            <li><a href="">Connect</a></li>
-            <li><a href="">Explore</a></li>
+            <li><a href="D:\Assignments\ASG2\events.html">Events</a></li>
+            <li><a href="D:\Assignments\ASG2\connect.html">Connect</a></li>
+            <li><a href="D:\Assignments\ASG2\explore.html">Explore</a></li>
           </ul>
         </div>
         <i class="fa fa-bars" onclick="showMenu()"></i>
       </nav>
-      <h1>About</h1>
+      <h1>Services and Specialties</h1>
     </section>
     <!-----------------Services and Specialties content------------------------------------->
-
-    <section class="facilities">
-      <h1>our facilities</h1>
-      <p>gggggggggggggg</p>
-
-      <div class="row">
-        <div class="facilities-col">
-          <img src="images\img1.jpg" />
-          <h3>world class library</h3>
-          <p>ddddddddddddddd</p>
-        </div>
-        <div class="facilities-col">
-          <img src="images\library-books.jpg" />
-          <h3>All types of books</h3>
-          <p>ddddddddddddddd</p>
-        </div>
-        <div class="facilities-col">
-          <img src="images\img1.jpg" />
-          <h3>Enjoy Events</h3>
-          <p>ddddddddddddddd</p>
+<p>We help people live happier, healthier, and more produtive lives. Find resources on building careers, parenting, cooking, investing, decorating, and crafting. Plan a trip, learn more about the past, or contemplate the present. Can't find what you need? Ask for help. We're here to help you find what you're looking for.</p>
+    <div class="row">
+      <div class="services-col">
+        <img src="images\img4.jpg">
+        <div class="layer">
+          <h3>Virtual Library</h3>
         </div>
       </div>
-    </section>
+
+      <div class="services-col">
+        <img src="images\img6.jpg">
+        <div class="layer">
+          <h3>Book Discussions</h3>
+        </div>
+      </div>
+
+      <div class="services-col">
+        <img src="images\img5.jpg">
+        <div class="layer">
+          <h3>Research</h3>
+        </div>
+      </div>
+    </div>
 
      <!----------------------------Footer---------------------------------->
      <section class="footer">
