--- a/about.html
+++ b/about.html
@@ -21,17 +21,17 @@
   <body>
     <section class="header1">
       <nav>
-        <a href="Assignment2.html"><img src="images\logo.png" /></a>
+        <a href="about.html"><img src="images\logo.png" /></a>
         <div class="nav-links" id="navLinks">
           <i class="fa fa-times" onclick="hideMenu()"></i>
           <ul>
-            <li><a href="">Home</a></li>
+            <li><a href="D:\Assignments\ASG2\index.html">Home</a></li>
           
             <li><a class="active" href="">About</a></li>
-            <li><a href="">Services and Specialties</a></li>
-            <li><a href="">Events</a></li>
-            <li><a href="">Connect</a></li>
-            <li><a href="">Explore</a></li>
+            <li><a href="D:\Assignments\ASG2\servicesandspecialties.html">Services and Specialties</a></li>
+            <li><a href="D:\Assignments\ASG2\events.html">Events</a></li>
+            <li><a href="D:\Assignments\ASG2\connect.html">Connect</a></li>
+            <li><a href="D:\Assignments\ASG2\explore.html">Explore</a></li>
           </ul>
         </div>
         <i class="fa fa-bars" onclick="showMenu()"></i>
@@ -43,10 +43,11 @@
     <section class="about">
       <div class="row">
         <div class="about-col">
-          <h1>We are biggest</h1>
-          <p>ggggggggggggggggggggggggggggsjsajsa</p>
-          <a href="" class="hero-btn blue-btn">Read Now</a>
-        </div>
+          <h1>Vision</h1>
+          <p>To be the heart of our diverse community by promoting the development of independent, self-confident, and literate citizens, and providing equitable access to cultural, intellectual, technological, and information resources.
+          </p>
+          <a href="D:\Assignments\ASG2\explore.html" class="hero-btn blue-btn">Read Now</a>
+          </div>
         <div class="about-col">
           <img src="images\img1.jpg" />
         </div>
