--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Events-Silent Library</title>
+    <title>Login Silent Library</title>
     <link rel="stylesheet" href="css\style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link
@@ -19,61 +19,36 @@
   </head>
 
   <body>
-    <section class="header1">
+    <section class="header">
       <nav>
-        <a href="events.html"><img src="images\logo.png" /></a>
+        <a href="login.html"><img src="images\logo.png" /></a>
         <div class="nav-links" id="navLinks">
-          <i class="fa fa-times" onclick="hideMenu()"></i>
           <ul>
-            <li><a href="D:\Assignments\ASG2\index.html">Home</a></li>
-            <li><a href="D:\Assignments\ASG2\about.html">About</a></li>
-            <li><a href="D:\Assignments\ASG2\servicesandspecialties.html">Services and Specialties</a></li>
-            <li><a class="active" href="">Events</a></li>
-            <li><a href="D:\Assignments\ASG2\connect.html">Connect</a></li>
-            <li><a href="D:\Assignments\ASG2\explore.html">Explore</a></li>
+              <li><a href="D:\Assignments\ASG2\index.html">Home</a></li>
           </ul>
-        </div>
-        <i class="fa fa-bars" onclick="showMenu()"></i>
+         </div>
       </nav>
-      <h1>Events</h1>
     </section>
-    <!-----------------Events content------------------------------------->
-    <section class="events">
-      <h1>Featured Events</h1>
-      <div class="row">
-        <div class="events-col">
-          <h3>Kids</h3>
-          <h2>Yellow Crayon Players Storytime</h2>
-          <p>Friday, December 1, 9:30am - 10:15am<br>
-            @ Main Library- Children's Room<br>
-           Age group:Children<br>
-           Event Type:Storytime & Early Literacy</p>
-           
-        </div>
-        <div class="events-col">
-          <h3>Teens</h3>
-          <h2>Teen Fall DIY's</h2>
-          <p>Saturday, December 9, 09:00am - 10:00am<br>
-            @ BMICH
-            Age Group:Teens(Grades 6-12)<br>
-
-          Event type:Self-directed, Crafts and DIY<br>
-          Come to the Loft to make stuff with us!<br>Drop-in crafts available throughout the summer.</p>
-        </div>
-        <div class="events-col">
-          <h3>Adults</h3>
-          <h2>Fika</h2>
-
-          <p>Wednesday, November 12, 9:00am - 10:00am<br>
-            @ Main Library<br>
-           Age Group:   Adults<br>
-           Event Type:  VIRTUAL</p>
-        </div>
-      </div>
+  <!-----Login and Register------------->
+  <section>        
+  <div class="loginregister">
+            <img src="images/login.png" class="avatar">
+              <h1>Login Here</h1>
+              <form>
+                  <p>Username</p>
+                  <input type="text" name="" placeholder="Enter Username">
+                  <p>Password</p>
+                  <input type="password" name="" placeholder="Enter Pssword"><br><br><br>
+                  <input type="submit" name="" value="login">
+                  <a href="#">Forgot Password</a><br>
+                  <a href="#">Don't have an account</a>
+    
+              </form>
+          </div>
     </section>
 
-     <!----------------------------Footer---------------------------------->
-     <section class="footer">
+    <!----------------------------Footer---------------------------------->
+    <section class="footer">
       <div class="row">
         <div class="footer-col1">
           <div class="icons">
@@ -115,5 +90,5 @@
         </div>
       </div>
     </section>
-  </body>
-  </html>
+ 
+    </body></html>
