--- a/connect.html
+++ b/connect.html
@@ -15,7 +15,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <script src="js\script.js"></script>
+    <script src=js\script.js></script>></script>
   </head>
 
   <body>
@@ -25,12 +25,12 @@
         <div class="nav-links" id="navLinks">
           <i class="fa fa-times" onclick="hideMenu()"></i>
           <ul>
-            <li><a href="D:\Assignments\ASG2\index.html">Home</a></li>
-            <li><a href="D:\Assignments\ASG2\about.html">About</a></li>
-            <li><a href="D:\Assignments\ASG2\servicesandspecialties.html">Services and Specialties</a></li>
-            <li><a href="D:\Assignments\ASG2\events.html">Events</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="servicesandspecialties.html">Services and Specialties</a></li>
+            <li><a href="events.html">Events</a></li>
             <li><a class="active" href="">Connect</a></li>
-            <li><a href="D:\Assignments\ASG2\explore.html">Explore</a></li>
+            <li><a href="explore.html">Explore</a></li>
           </ul>
         </div>
         <i class="fa fa-bars" onclick="showMenu()"></i>
@@ -44,7 +44,7 @@
         <div class="about-col">
           <h1>Main Branch<br>Silent Library,Riverston Road, Colombo 6</h1>
           <p>Join us for storytimes, book groups, and other programs for all ages. Read or work in one of our many comfortable seating areas. Use our computers or take advantage of our free wi-fi.</p>
-          <a href="D:\Assignments\ASG2\index.html" class="hero-btn blue-btn">Read Now</a>
+          <a href="index.html" class="hero-btn blue-btn">Read Now</a>
         </div>
         <div class="about-col">
           <img src="images\bg4.jpg" />
