--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <script src="js\script.js"></script>
+    <script src=js\script.js></script>
   </head>
 
   <body>
@@ -24,7 +24,7 @@
         <a href="login.html"><img src="images\logo.png" /></a>
         <div class="nav-links" id="navLinks">
           <ul>
-              <li><a href="D:\Assignments\ASG2\index.html">Home</a></li>
+              <li><a href="index.html">Home</a></li>
           </ul>
          </div>
       </nav>
