--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <script src="js\script.js"></script>
+    <script src=js\script.js></script>
   </head>
 
   <body>
@@ -25,13 +25,13 @@
         <div class="nav-links" id="navLinks">
           <i class="fa fa-times" onclick="hideMenu()"></i>
           <ul>
-            <li><a href="D:\Assignments\ASG2\index.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
           
             <li><a class="active" href="">About</a></li>
-            <li><a href="D:\Assignments\ASG2\servicesandspecialties.html">Services and Specialties</a></li>
-            <li><a href="D:\Assignments\ASG2\events.html">Events</a></li>
-            <li><a href="D:\Assignments\ASG2\connect.html">Connect</a></li>
-            <li><a href="D:\Assignments\ASG2\explore.html">Explore</a></li>
+            <li><a href="servicesandspecialties.html">Services and Specialties</a></li>
+            <li><a href="events.html">Events</a></li>
+            <li><a href="connect.html">Connect</a></li>
+            <li><a href="explore.html">Explore</a></li>
           </ul>
         </div>
         <i class="fa fa-bars" onclick="showMenu()"></i>
@@ -46,7 +46,7 @@
           <h1>Vision</h1>
           <p>To be the heart of our diverse community by promoting the development of independent, self-confident, and literate citizens, and providing equitable access to cultural, intellectual, technological, and information resources.
           </p>
-          <a href="D:\Assignments\ASG2\explore.html" class="hero-btn blue-btn">Read Now</a>
+          <a href="explore.html" class="hero-btn blue-btn">Read Now</a>
           </div>
         <div class="about-col">
           <img src="images\img1.jpg" />
