--- a/register.html
+++ b/register.html
@@ -15,7 +15,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <script src="js\script.js"></script>
+    <script src=js\script.js></script>></script>
   </head>
 
   <body>
@@ -23,7 +23,7 @@
       <nav>
         <a href="register.html"><img src="images\logo.png" /></a>
         <div class="nav-links" id="navLinks">
-          <ul><li><a href="D:\Assignments\ASG2\index.html">Home</a></li></ul>
+          <ul><li><a href="index.html">Home</a></li></ul>
          </div>
       </nav>
     </section>
