--- a/servicesandspecialties.html
+++ b/servicesandspecialties.html
@@ -15,7 +15,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <script src="js\script.js"></script>
+    <script src=js\script.js></script>
   </head>
 
   <body>
@@ -25,12 +25,12 @@
         <div class="nav-links" id="navLinks">
           <i class="fa fa-times" onclick="hideMenu()"></i>
           <ul>
-            <li><a href="D:\Assignments\ASG2\index.html">Home</a></li>
-            <li><a href="D:\Assignments\ASG2\about.html">About</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
             <li><a class="active" href="">Services and Specialties</a></li>
-            <li><a href="D:\Assignments\ASG2\events.html">Events</a></li>
-            <li><a href="D:\Assignments\ASG2\connect.html">Connect</a></li>
-            <li><a href="D:\Assignments\ASG2\explore.html">Explore</a></li>
+            <li><a href="events.html">Events</a></li>
+            <li><a href="connect.html">Connect</a></li>
+            <li><a href="explore.html">Explore</a></li>
           </ul>
         </div>
         <i class="fa fa-bars" onclick="showMenu()"></i>
