--- a/login.html
+++ b/login.html
@@ -36,9 +36,9 @@
               <h1>Login Here</h1>
               <form>
                   <p>Username</p>
-                  <input type="text" name="" placeholder="Enter Username">
+                  <input type="text" name="" placeholder="Enter Username" required>
                   <p>Password</p>
-                  <input type="password" name="" placeholder="Enter Pssword"><br><br><br>
+                  <input type="password" name="" placeholder="Enter Pssword" required><br><br><br>
                   <input type="submit" name="" value="login">
                   <a href="#">Forgot Password</a><br>
                   <a href="#">Don't have an account</a>
