--- a/explore.html
+++ b/explore.html
@@ -15,7 +15,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <script src=js\script.js></script>></script>
+    <script src=js\script.js></script></script>
   </head>
 
   <body>
