--- a/explore.html
+++ b/explore.html
@@ -89,7 +89,7 @@
         </div>
 
         <div class="footer-col2">
-          <h4>Privacy Policy</h4>
+          <h4><a href="privacypolicy.html">Privacy Policy</a></h4>
           <p>
             <i class="fa fa-copyright"></i>Silent Library. All Rights Reserved
           </p>
