--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     <!---------------------------------testimonials------------------------->
     <section class="testimonials">
       <hr>
-      <h1>what our readers say</h1>
+      <h1>What Our Readers Say</h1>
       <p>Review about us</p>
 
       <div class="row">
@@ -223,7 +223,7 @@
         </div>
 
         <div class="footer-col2">
-          <h4>Privacy Policy</h4>
+          <h4><a href="privacypolicy.html">Privacy Policy</a></h4>
           <p>
             <i class="fa fa-copyright"></i>Silent Library. All Rights Reserved
           </p>
